// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlight start and end 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
       
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token keyword"
    >
      let
    </span>
    <span
      className="token plain"
    >
       other 
    </span>
    <span
      className="token operator"
    >
      =
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token string"
    >
      "no highlight"
    </span>
  </div>
</pre>
`;

exports[`highlights inline comment 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token comment"
    >
      
    </span>
  </div>
</pre>
`;

exports[`multiple highlight start and end 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line highlight"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
       
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token keyword"
    >
      let
    </span>
    <span
      className="token plain"
    >
       other 
    </span>
    <span
      className="token operator"
    >
      =
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token string"
    >
      "no highlight"
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        
    </span>
    <span
      className="token comment"
    >
      // highlight-end 
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        other 
    </span>
    <span
      className="token operator"
    >
      =
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token string"
    >
      "still no highlight here"
    </span>
    <span
      className="token plain"
    >
      
    </span>
  </div>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
        other 
    </span>
    <span
      className="token operator"
    >
      =
    </span>
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token string"
    >
      "or here"
    </span>
  </div>
</pre>
`;

exports[`no highlight 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token plain"
    >
       
    </span>
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
  </div>
</pre>
`;

exports[`renders a code block 1`] = `
<pre
  className="language-js prism-code language-javascript emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token console class-name"
    >
      console
    </span>
    <span
      className="token punctuation"
    >
      .
    </span>
    <span
      className="token method function property-access"
    >
      log
    </span>
    <span
      className="token punctuation"
    >
      (
    </span>
    <span
      className="token string"
    >
      'hello, world!'
    </span>
    <span
      className="token punctuation"
    >
      )
    </span>
  </div>
</pre>
`;

exports[`renders with other languages 1`] = `
<pre
  className="language-php prism-code language-php emotion-0"
  style={Object {}}
>
  <div
    className="token-line"
  >
    <span
      className="token operator"
    >
      &lt;
    </span>
    <span
      className="token plain"
    >
      h1
    </span>
    <span
      className="token operator"
    >
      &gt;
    </span>
    <span
      className="token plain"
    >
      Hello
    </span>
    <span
      className="token operator"
    >
      &lt;
    </span>
    <span
      className="token operator"
    >
      /
    </span>
    <span
      className="token plain"
    >
      h1
    </span>
    <span
      className="token operator"
    >
      &gt;
    </span>
  </div>
</pre>
`;
